More translation fixes
https://github.com/leezer3/OpenBVE/pull/970

--- a/assets/Languages/en-US.xlf
+++ b/assets/Languages/en-US.xlf
@@ -4060,6 +4060,7 @@
 						<trans-unit id="suffixoption">
 							<source>Suffix option</source>
 						</trans-unit>
+					</group>
 					<group id="this">
 						<trans-unit id="name">
 							<source>This</source>
@@ -4650,6 +4651,7 @@
 					</trans-unit>
 				</group>
 			</group>
+
 		</body>
 	</file>
 </xliff>
