--- a/assets/Languages/it-IT.xlf
+++ b/assets/Languages/it-IT.xlf
@@ -2745,7 +2745,7 @@
 						<source>Shows or hides vertex normals</source>
 						<target>Visualizza / nasconde l'indicazione delle normali</target>
 					</trans-unit>
-					<trans-unit id="debug_brake">
+					<trans-unit id="debug_brake_systems">
 						<source>Shows or hides brake system debug output</source>
 						<target>Visualizza / nasconde lo stato del sistema frenante</target>
 					</trans-unit>
