--- a/assets/Languages/ko-KR.xlf
+++ b/assets/Languages/ko-KR.xlf
@@ -2745,7 +2745,7 @@
 						<source>Shows or hides vertex normals</source>
 						<target>정점 법선 보이기/숨기기</target>
 					</trans-unit>
-					<trans-unit id="debug_brake">
+					<trans-unit id="debug_brake_systems">
 						<source>Shows or hides brake system debug output</source>
 						<target>브레이크 디버그 보이기/숨기기</target>
 					</trans-unit>
