--- a/assets/Languages/ms_MY.xlf
+++ b/assets/Languages/ms_MY.xlf
@@ -2760,7 +2760,7 @@
 						<source>Shows or hides vertex normals</source>
 						<target>Menunjukkan atau menyembunyikan norma puncak</target>
 					</trans-unit>
-					<trans-unit id="debug_brake">
+					<trans-unit id="debug_brake_systems">
 						<source>Shows or hides brake system debug output</source>
 						<target>Menunjukkan atau menyembunyikan output nyahpepijat sistem brek</target>
 					</trans-unit>
