--- a/assets/Languages/zh-TW.xlf
+++ b/assets/Languages/zh-TW.xlf
@@ -2741,7 +2741,7 @@
 						<source>Shows or hides vertex normals</source>
 						<target>顯示或隱藏頂點法線</target>
 					</trans-unit>
-					<trans-unit id="debug_brake">
+					<trans-unit id="debug_brake_systems">
 						<source>Shows or hides brake system debug output</source>
 						<target>顯示或隱藏制動系統除錯輸出</target>
 					</trans-unit>
