--- a/assets/Languages/cs-CZ.xlf
+++ b/assets/Languages/cs-CZ.xlf
@@ -2745,7 +2745,7 @@
 						<source>Shows or hides vertex normals</source>
 						<target>Zobrazit/skrýt normálové vektory</target>
 					</trans-unit>
-					<trans-unit id="debug_brake">
+					<trans-unit id="debug_brake_systems">
 						<source>Shows or hides brake system debug output</source>
 						<target>Zobrazit/skrýt stav brzd</target>
 					</trans-unit>
