--- a/assets/Languages/fi-FI.xlf
+++ b/assets/Languages/fi-FI.xlf
@@ -2744,7 +2744,7 @@
 						<source>Shows or hides vertex normals</source>
 						<target>Näyttää tai piilottaa vikanäytön</target>
 					</trans-unit>
-					<trans-unit id="debug_brake">
+					<trans-unit id="debug_brake_systems">
 						<source>Shows or hides brake system debug output</source>
 						<target>Näyttää tai piilottaa jarrujärjestelmän viat</target>
 					</trans-unit>
