--- a/assets/Languages/fr-FR.xlf
+++ b/assets/Languages/fr-FR.xlf
@@ -2744,7 +2744,7 @@
 						<source>Shows or hides vertex normals</source>
 						<target>Active/désactive l'affichage des normales des vertex</target>
 					</trans-unit>
-					<trans-unit id="debug_brake">
+					<trans-unit id="debug_brake_systems">
 						<source>Shows or hides brake system debug output</source>
 						<target>Active/désactive l'affichage des informations de débogage du système de freinage</target>
 					</trans-unit>
