--- a/assets/Languages/nb_NO.xlf
+++ b/assets/Languages/nb_NO.xlf
@@ -2700,7 +2700,7 @@
 				    <source>Shows or hides vertex normals</source>
 				    <target>Vis eller skjul 3D hjelpe linjer</target>
 				  </trans-unit>
-				  <trans-unit id="debug_brake">
+				  <trans-unit id="debug_brake_systems">
 				    <source>Shows or hides brake system debug output</source>
 				    <target>Vis eller skjul utskrift fra bremsesystem</target>
 				  </trans-unit>
