--- a/assets/Languages/nl-NL.xlf
+++ b/assets/Languages/nl-NL.xlf
@@ -2744,7 +2744,7 @@
 						<source>Shows or hides vertex normals</source>
 						<target>Laat vertex normals zien of verbergt deze</target>
 					</trans-unit>
-					<trans-unit id="debug_brake">
+					<trans-unit id="debug_brake_systems">
 						<source>Shows or hides brake system debug output</source>
 						<target>Laat remsysteem debug output zien of verberg deze</target>
 					</trans-unit>
