--- a/assets/Languages/pl-PL.xlf
+++ b/assets/Languages/pl-PL.xlf
@@ -2764,7 +2764,7 @@
 						<source>Shows or hides vertex normals</source>
 						<target>Pokaz/Ukryj vertexy</target>
 					</trans-unit>
-					<trans-unit id="debug_brake">
+					<trans-unit id="debug_brake_systems">
 						<source>Shows or hides brake system debug output</source>
 						<target>Pokaz/ukryj system hamulców</target>
 					</trans-unit>
