--- a/assets/Languages/ru-RU.xlf
+++ b/assets/Languages/ru-RU.xlf
@@ -2744,7 +2744,7 @@
 						<source>Shows or hides vertex normals</source>
 						<target>Включить/выключить отображение нормалей</target>
 					</trans-unit>
-					<trans-unit id="debug_brake">
+					<trans-unit id="debug_brake_systems">
 						<source>Shows or hides brake system debug output</source>
 						<target>Включить/выключить отображение отладочного режима тормозной системы</target>
 					</trans-unit>
