--- a/assets/Languages/uk-UA.xlf
+++ b/assets/Languages/uk-UA.xlf
@@ -2746,7 +2746,7 @@
 						<source>Shows or hides vertex normals</source>
 						<target>Показати/сховати вертекси</target>
 					</trans-unit>
-					<trans-unit id="debug_brake">
+					<trans-unit id="debug_brake_systems">
 						<source>Shows or hides brake system debug output</source>
 						<target>Показати/сховати систему гальм</target>
 					</trans-unit>
