New: Add Train.DownloadLocation to routefiles
Minor thing that should have been done before, might help.....

--- a/assets/Languages/en-US.xlf
+++ b/assets/Languages/en-US.xlf
@@ -318,6 +318,9 @@
 					<trans-unit id="train_notfound">
 						<source>The default train could not be found:\r\n\r\n</source>
 					</trans-unit>
+					<trans-unit id="train_notfound_download">
+						<source>The default train is not currently installed:\r\n\r\n [train]\r\n\r\n It may be downloaded at:\r\n\r\n</source>
+					</trans-unit>
 					<trans-unit id="train_pluginnotsupported">
 						<source>--- This train uses a safety system plugin which cannot be used on your operating system. The built-in safety systems ATS/ATC will be used instead, which might cause operational problems. ---</source>
 					</trans-unit>
